syntax = "proto3";

package assfire.api.v1.model.routing;
option go_package = "assfire.org/api/v1";

message Location {
  int32 lat = 1;
  int32 lon = 2;
}

message CoordinateFormat {
  enum CoordinateFormatType {
    FIXED_POINT_INT = 0;
  }

  CoordinateFormatType type = 1;
  int32 precision = 2;
}

message RoutingOptions {
  enum RoutingType {
    EUCLIDEAN = 0;
    RANDOM = 1;
    CROWFLIGHT = 2;
    OSRM = 3;
  }

  message Osrm {
    enum Geometry {
      SIMPLIFIED = 0;
      FULL = 1;
      STRAIGHT_LINE = 2;
    }

    Geometry geometry = 1;
  }

  RoutingType routing_type = 1;
  CoordinateFormat coordinates_format = 2;
  double velocity = 3;
  bool force_update = 4;
  bool retrieve_waypoints = 5;

  Osrm osrm = 6;
}

message RouteInfo {
  Location origin = 1;
  Location destination = 2;
  int32 duration = 3;
  float distance = 4;
  repeated Location waypoints = 5;
}

